syntax = "proto3";

package order;

option go_package = "order-ms/internal/handler/grpc/pb";

message Order {
  string id = 1;
  string user_id = 2;
  string product_id = 3;
  string status = 4;
}

message CreateOrderRequest {
  string user_id = 1;
  string product_id = 2;
}

message CreateOrderResponse {
  string order_id = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
}
